<resources>
    <string name="app_name">Mawed</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="text_title_started_1">Find Your Best Barber Shop Nearby</string>
    <string name="text_subtitle_started_1">Easily search your best and favorite barber shops anywhere nearby</string>
    <string name="text_title_started_2">No Need to Do a Boring Queue, Just Stay Home!</string>
    <string name="text_subtitle_started_2">Waiting for your turn comfortably at home and we will inform you for your turn</string>
    <string name="text_title_started_3">Book your\n appointment easily\n and quickly</string>
    <string name="text_subtitle_started_3">"Feel comfortable ordering and waiting for your turn with "</string>
    <string name="auth">Login</string>
    <string name="phone_number">phone number</string>
    <string name="agreement_terms">I agree to the Terms of Use and Privacy Policy</string>
    <string name="don_have_account">Don\'t have an account?</string>
    <string name="register_account">Register an account</string>
    <string name="text_enter_code">Enter the code</string>
    <string name="resend_code">Resend the code</string>
    <string name="activation">Activation</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mail">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="have_account">you have an account ?</string>
    <string name="log_in">Log in</string>
    <string name="home">Home</string>
    <string name="sections">Sections</string>
    <string name="my_date">My dates</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="book_for_lady">Reservation for a lady</string>
    <string name="book_for_man">Reservation for a man</string>
    <string name="Language">language</string>
    <string name="about_us">about us</string>
    <string name="live_chat">Live chat</string>
    <string name="asked_questions">Asked Questions</string>
    <string name="message_manager">Message manager</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="notifications">Notifications</string>
    <string name="create_business_account">Create a business account</string>
    <string name="service">Service</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="your_upcoming_appointments">Your upcoming appointments</string>
    <string name="more">More</string>
    <string name="nearest">Nearest</string>
    <string name="choose_required_service">Choose the required service</string>
    <string name="total">Total</string>
    <string name="book">Book</string>
    <string name="appointment_booking">Appointment Booking</string>
    <string name="time">Time</string>
    <string name="please_enter_phone">Please enter your phone number</string>
    <string name="dlg_wifi">WIFI</string>
    <string name="check_internet">Please check your internet connection and try again</string>
    <string name="enter_your_first_name">Please enter your first name</string>
    <string name="enter_your_last_name">Please enter your last name</string>
    <string name="choose_your_date_of_birth">Please choose your date of birth</string>
    <string name="please_agree_terms">By clicking here you agree to the Privacy Policy</string>
    <string name="paying">Paying</string>
    <string name="payment_method">Payment method</string>
    <string name="discount_coupon">Discount coupon</string>
    <string name="customer_name">Customer name ؟ *</string>
    <string name="booking_done">Booking done</string>
    <string name="payment_date">Payment Date</string>
    <string name="order_number">Order number</string>
    <string name="payment_number">Payment number</string>
    <string name="details">details</string>
    <string name="share">Share</string>
    <string name="location">Location</string>
    <string name="order_samary">Order Samary</string>
    <string name="order_time">Order time</string>
    <string name="order_status">Order status</string>
    <string name="name_salon">Name of salon</string>
    <string name="name_barber">Barber name</string>
    <string name="service_fee">Service fee</string>
    <string name="discount">Discount</string>
    <string name="booking_date">Booking date</string>
    <string name="booking_time">Booking time</string>
    <string name="changing_appoiment">Changing the appointment is more than an hour before the appointment only</string>
    <string name="call">Call</string>
    <string name="done">Done</string>
    <string name="appointments">Appointments</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="return_phone_number">Return the phone number</string>
    <string name="send_request">Send request</string>
    <string name="cancel">Cancel</string>
    <string name="general_settings">General Settings</string>
    <string name="app_language">App Language</string>
    <string name="whatsapp_number">Whatsapp number</string>
    <string name="email">E-mail</string>
    <string name="subscribe">Subscribe</string>
    <string name="select_your_subscribe">Select your subscribe</string>
    <string name="create_business_accont">Create a business accont</string>
    <string name="full_name">Full name*</string>
    <string name="commercial_name">Commercial name *</string>
    <string name="category">Category  *</string>
    <string name="type_business">Type of business *</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="faq">FAQ</string>
    <string name="addresses">Addresses</string>
    <string name="add_address">Add address</string>
    <string name="governorate">Governorate*</string>
    <string name="region">Region</string>
    <string name="widget">Block*</string>
    <string name="street">Street*</string>
    <string name="house_number">House number</string>
    <string name="my_location">My location</string>
    <string name="save">Save</string>
    <string name="please_enter_widget">Please enter widget</string>
    <string name="please_enter_street">PLease enter street</string>
    <string name="please_enter_house_number">Please enter house number</string>
    <string name="please_select_location">PLease select your location</string>
    <string name="add_address_success">The address has been added successfully</string>
    <string name="enter_verify_code">Enter verify code</string>
    <string name="all">All</string>
    <string name="nothing">Nothing</string>
    <string name="enter_your_full_name">Please enter your full name</string>
    <string name="enter_your_commercial_name">Please enter your commercial name</string>
    <string name="enter_type_business">Please enter type business</string>
    <string name="enter_whatsapp_number">Please enter whatsapp number</string>
    <string name="please_select_category">Please select category</string>
    <string name="please_select_your_address">Please select your address</string>
    <string name="done_send_reques">Your request has been sent\n to management successfully</string>
    <string name="will_contact_soon">We will contact you soon</string>
    <string name="scan">Scan</string>
    <string name="my_account">My account</string>
    <string name="work_hours">Work hours</string>
    <string name="my_services">My services</string>
    <string name="back_my_account">Back to my account</string>
    <string name="logout">Log Out</string>
    <string name="management">Management</string>
    <string name="upcoming_appointments">Upcoming</string>
    <string name="appointments_archive">Archive</string>
    <string name="list_services">List of services and prices</string>
    <string name="sales">Sales</string>
    <string name="account_details">Account details</string>
    <string name="socialist">Socialist</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="our_services">Our services</string>
    <string name="back">Back</string>
    <string name="minute">Minute</string>
    <string name="price">Price</string>
    <string name="employee">Employee</string>
    <string name="from_hour">From hour</string>
    <string name="to_hour">To hour</string>
    <string name="closed">Closed</string>
    <string name="hours24">24 hours</string>
    <string name="one_time">One time</string>
    <string name="two_shifts">Two shifts</string>
    <string name="prepare">Prepare</string>
    <string name="sure_log_out">Are You Sure Want To Log Out</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="please_enter_old_phone">Please enter your old phone number</string>
    <string name="please_enter_new_phone">Please enter the new phone number</string>
    <string name="old_phone_number">Old phone number</string>
    <string name="new_phone_number">New phone number</string>
    <string name="change_phone_number_successfully">Done changeyour phone number successfully</string>
    <string name="rate">Rate</string>
    <string name="please_select_services">Please select services</string>
    <string name="apply">Apply</string>
    <string name="gender">Gender</string>
    <string name="edit_profile">Edit profile</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="invalid_email">The email entered is not valid</string>
    <string name="days">Days</string>
    <string name="select_status">Select status</string>
    <string name="reservation_done">Reservation</string>
    <string name="attended">Attended</string>
    <string name="past_date">Past date</string>
    <string name="change_order_status_success">Done change order status successfully</string>
    <string name="commercial_name_ar">Commercail name arabic</string>
    <string name="commercial_name_en">Commercial name english</string>
    <string name="description_ar">Description in arabic</string>
    <string name="description_en">Description in english</string>
    <string name="select_image">Please select salon images</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="please_login">Please login first to continue \nYou are now in guest mode</string>
    <string name="yes">Yes</string>
    <string name="your_gps_seems_to_be_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="upcoming_dates">Upcoming Dates</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="change">Change</string>
    <string name="order_done">done your order successfully</string>
    <string name="salon_account">Salon account</string>
    <string name="enter_sevice_details">Enter service details</string>
    <string name="please_enter_service_time">Please enter service time</string>
    <string name="please_enter_service_price">Please enter service price</string>
    <string name="account_not_active">Your account deactivate please wait while active your account</string>
    <string name="please_select_payment_method">Please select payment method</string>
    <string name="delete">Delete</string>
    <string name="text_delete_service">Do you want to delete this service</string>
    <string name="month">Month</string>
    <string name="three_month">3 Month</string>
    <string name="six_month">6 Month</string>
    <string name="year">Year</string>
</resources>