<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_dialog"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_16sdp"
    android:layout_marginEnd="@dimen/_16sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:background="@drawable/bg_dialog"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp">

        <RelativeLayout
            android:id="@+id/rel_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_text_permissios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/your_gps_seems_to_be_disabled"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/_20sdp"/>

            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/colorMainText"
                android:layout_below="@id/tv_text_permissios"/>

            <TextView
                android:id="@+id/tv_cance"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textSize="16sp"
                android:layout_below="@+id/tv_text_permissios"
                android:layout_alignParentEnd="true"
                android:textAlignment="center"
                android:textColor="@color/colorMainText"
                android:layout_marginStart="@dimen/_8sdp" />


        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>